// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OutboundFormModal > field structure is stable for every protocol > blackhole 1`] = `
[
  "Protocol",
  "Tag",
  "Send Through",
  "Response type",
  "Sockopts",
  "TCP Masks",
]
`;

exports[`OutboundFormModal > field structure is stable for every protocol > dns 1`] = `
[
  "Protocol",
  "Tag",
  "Send Through",
  "Rewrite network",
  "Rewrite address",
  "Rewrite port",
  "User Level",
  "Rules",
  "Sockopts",
  "TCP Masks",
]
`;

exports[`OutboundFormModal > field structure is stable for every protocol > freedom 1`] = `
[
  "Protocol",
  "Tag",
  "Send Through",
  "Strategy",
  "Redirect",
  "User Level",
  "Proxy protocol",
  "Fragment",
  "Noises",
  "Final Rules",
  "Sockopts",
  "TCP Masks",
]
`;

exports[`OutboundFormModal > field structure is stable for every protocol > http 1`] = `
[
  "Protocol",
  "Tag",
  "Send Through",
  "Address",
  "Port",
  "Username",
  "Password",
  "Sockopts",
  "TCP Masks",
  "Mux",
]
`;

exports[`OutboundFormModal > field structure is stable for every protocol > hysteria 1`] = `
[
  "Protocol",
  "Tag",
  "Send Through",
  "Address",
  "Port",
  "Transmission",
  "Version",
  "Auth password",
  "UDP idle timeout (s)",
  "Masquerade",
  "Security",
  "SNI",
  "uTLS",
  "ALPN",
  "ECH",
  "Verify peer name",
  "Pinned SHA256",
  "Sockopts",
  "UDP Masks",
  "QUIC Params",
]
`;

exports[`OutboundFormModal > field structure is stable for every protocol > loopback 1`] = `
[
  "Protocol",
  "Tag",
  "Send Through",
  "Inbound tag",
  "Sockopts",
  "TCP Masks",
]
`;

exports[`OutboundFormModal > field structure is stable for every protocol > shadowsocks 1`] = `
[
  "Protocol",
  "Tag",
  "Send Through",
  "Address",
  "Port",
  "Password",
  "Encryption",
  "UDP over TCP",
  "UoT version",
  "Transmission",
  "HTTP Obfuscation",
  "Security",
  "Sockopts",
  "TCP Masks",
  "Mux",
]
`;

exports[`OutboundFormModal > field structure is stable for every protocol > socks 1`] = `
[
  "Protocol",
  "Tag",
  "Send Through",
  "Address",
  "Port",
  "Username",
  "Password",
  "Sockopts",
  "TCP Masks",
  "Mux",
]
`;

exports[`OutboundFormModal > field structure is stable for every protocol > trojan 1`] = `
[
  "Protocol",
  "Tag",
  "Send Through",
  "Address",
  "Port",
  "Password",
  "Transmission",
  "HTTP Obfuscation",
  "Security",
  "Sockopts",
  "TCP Masks",
  "Mux",
]
`;

exports[`OutboundFormModal > field structure is stable for every protocol > vless 1`] = `
[
  "Protocol",
  "Tag",
  "Send Through",
  "Address",
  "Port",
  "ID",
  "Encryption",
  "Reverse tag",
  "Transmission",
  "HTTP Obfuscation",
  "Security",
  "Sockopts",
  "TCP Masks",
  "Mux",
]
`;

exports[`OutboundFormModal > field structure is stable for every protocol > vmess 1`] = `
[
  "Protocol",
  "Tag",
  "Send Through",
  "Address",
  "Port",
  "ID",
  "Security",
  "Transmission",
  "HTTP Obfuscation",
  "Security",
  "Sockopts",
  "TCP Masks",
  "Mux",
]
`;

exports[`OutboundFormModal > field structure is stable for every protocol > wireguard 1`] = `
[
  "Protocol",
  "Tag",
  "Send Through",
  "Address",
  "Private Key",
  "Public Key",
  "Domain Strategy",
  "MTU",
  "Workers",
  "No-kernel TUN",
  "Reserved",
  "Peers",
  "Sockopts",
  "TCP Masks",
]
`;
